// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardComponent renders CardComponent correctly 1`] = `
<DocumentFragment>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-bhp9pd-MuiPaper-root-MuiCard-root"
    style="height: 100%;"
  >
    <img
      alt="Test Name"
      class="MuiCardMedia-root MuiCardMedia-media MuiCardMedia-img css-o69gx8-MuiCardMedia-root"
      height="90%"
      src="test-image.jpg"
    />
    <div
      class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
      style="background-color: red;"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 MuiTypography-gutterBottom css-18k87ye-MuiTypography-root"
      >
        Test Name
      </h6>
      <div>
        extras
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CardComponent renders CardComponent with default content style if not provided 1`] = `
<DocumentFragment>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-bhp9pd-MuiPaper-root-MuiCard-root"
    style="height: 100%;"
  >
    <img
      alt="Test Name"
      class="MuiCardMedia-root MuiCardMedia-media MuiCardMedia-img css-o69gx8-MuiCardMedia-root"
      height="90%"
      src="test-image.jpg"
    />
    <div
      class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
      style="height: 120px; padding: 5px; display: flex; justify-content: space-between;"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 MuiTypography-gutterBottom css-18k87ye-MuiTypography-root"
      >
        Test Name
      </h6>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CardComponent renders CardComponent without extras 1`] = `
<DocumentFragment>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-bhp9pd-MuiPaper-root-MuiCard-root"
    style="height: 100%;"
  >
    <img
      alt="Test Name"
      class="MuiCardMedia-root MuiCardMedia-media MuiCardMedia-img css-o69gx8-MuiCardMedia-root"
      height="90%"
      src="test-image.jpg"
    />
    <div
      class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
      style="height: 120px; padding: 5px; display: flex; justify-content: space-between;"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 MuiTypography-gutterBottom css-18k87ye-MuiTypography-root"
      >
        Test Name
      </h6>
    </div>
  </div>
</DocumentFragment>
`;
